spring-boot-elasticsearch/src/initcontainer/springbootapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springbootelastic
spec:
  selector:
    matchLabels:
      run: springbootelastic
  replicas: 1
  template:
    metadata:
      labels:
        run: springbootelastic
    spec:
      containers:
        - name: springbootelastic
          image: wangyan100/springbootelastic:latest
          imagePullPolicy: Always
