spring-boot-elasticsearch/src/initcontainer/example-ingress.yaml
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
 rules:
 - host: hello-world.info
   http:
     paths:
     - path: /elasticsearch/*
       backend:
         serviceName: elasticsearch 
         servicePort: 9200
